<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_account">Add</string>
    <string name="add_comment">Add comment</string>
    <string name="app_name">Materialistic</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_info_text">"
            &lt;p>Version: %1$s (%2$d)&lt;/p>
            &lt;p>This application is open source at &lt;a href=\"https://github.com/hidroh/materialistic\">github.com/hidroh/materialistic&lt;/a>&lt;/p>
        "</string>
    <string name="application_info_title">Application Info</string>
    <string name="article">Article</string>
    <string name="article_link">Article link</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_account">Choose an account</string>
    <string name="chooser_title">Open with</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_drafts">Clear all drafts</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="clear_search_history_confirm">Clear search history?</string>
    <string name="clear_selected">Clear selected</string>
    <string name="close_drawer">Close drawer</string>
    <string name="comment_display_collapsed">Single page - collapsed</string>
    <string name="comment_display_multiple">Multiple pages</string>
    <string name="comment_display_single">Single page - auto expand</string>
    <string name="comment_failed">Failed to send comment</string>
    <string name="comment_hint">Comment</string>
    <string name="comment_max_lines_3">Max 3 lines</string>
    <string name="comment_max_lines_4">Max 4 lines</string>
    <string name="comment_max_lines_5">Max 5 lines</string>
    <string name="comment_max_lines_all">Full content</string>
    <string name="comment_required">Comment is required</string>
    <string name="comment_successful">Comment added. Please refresh to see.</string>
    <string name="comments">Comments</string>
    <string name="confirm_clear">Clear all saved stories?</string>
    <string name="confirm_clear_selected">Clear selected saved stories?</string>
    <string name="confirm_no_submit">Exit without submitting?</string>
    <string name="confirm_no_waiting">Exit without waiting?</string>
    <string name="confirm_save_draft">Save draft?</string>
    <string name="confirm_submit_question">Submit as question?</string>
    <string name="confirm_submit_url">Submit as link?</string>
    <string name="connection_error">Unable to connect to Hacker News. Check your connection or try again.</string>
    <string name="create_account">Create account</string>
    <string name="dead_prefix">[dead]</string>
    <string name="delete">Delete</string>
    <string name="developer_info_text">"
            &lt;p>
            Ha Duy Trung
            &lt;a href=\"https://twitter.com/hadt\">@hadt&lt;/a> /
            &lt;a href=\"https://github.com/hidroh\">Github&lt;/a> /
            &lt;a href=\"https://hidroh.github.io\">Blog&lt;/a>
            &lt;/p>
        "</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="discard_draft">Discard draft</string>
    <string name="display">Display</string>
    <string name="display_options">Display options</string>
    <string name="download_external">View in another app</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="empty_text">[This story has no content]</string>
    <string name="end_of_thread">End of thread</string>
    <string name="exit_fullscreen">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="export">Export</string>
    <string name="export_notification">Saved to file. Tap for options.</string>
    <string name="export_saved_stories">Export saved stories</string>
    <string name="fab_scrolling_view_behavior">io.github.hidroh.materialistic.FabAwareScrollBehavior</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_failed">Failed to send, please try again</string>
    <string name="feedback_note">"
            Your feedback will be made public as a &lt;a href=\"https://github.com/hidroh/materialistic/issues\">Materialistic Github issue&lt;/a>.
        "</string>
    <string name="feedback_sent">Feedback sent. Thank you!</string>
    <string name="file_not_supported">Content type not supported</string>
    <string name="filter_title_item">Materialistic</string>
    <string name="find_in_page">Find in page</string>
    <string name="font_options">Font options</string>
    <string name="formatting_guidelines">HN formatting guidelines</string>
    <string name="forward">Forward</string>
    <string name="frequency_12_hours">12 hours</string>
    <string name="frequency_1_day">1 day</string>
    <string name="frequency_3_hours">3 hours</string>
    <string name="frequency_6_hours">6 hours</string>
    <string name="full_text">Full text</string>
    <string name="got_it">Got it</string>
    <string name="help_lazy_load">"With lazy loading setting enabled, only your preferred default tab will be loaded when an item is first opened.

If you are on a slow connection or encounter lagging, turning this on may help."</string>
    <string name="help_long_volume_up">Long press volume up to quick scroll to top</string>
    <string name="help_navigate">Display a floating navigation button that responds to swipe gestures to navigate nested comment threads.</string>
    <string name="help_navigate_down">Swipe ↓: go to next comment</string>
    <string name="help_navigate_left">Swipe ←: go back to parent</string>
    <string name="help_navigate_move">Long press to drag navigation button to new position</string>
    <string name="help_navigate_right">Swipe →: expand &amp; go to 1st reply</string>
    <string name="help_navigate_up">Swipe ↑: go to previous comment</string>
    <string name="help_new_comments">Story with new comments since last refresh</string>
    <string name="help_new_story">New story since last refresh</string>
    <string name="help_promoted_story">Promoted story since last refresh</string>
    <string name="help_volume_down">Press volume down to scroll down</string>
    <string name="help_volume_up">Press volume up to scroll up</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_drag">Drag to reposition</string>
    <string name="hint_nav_short">"Swipe ↑ ↓ → ← to navigate
Long press to reposition"</string>
    <string name="hint_search_saved_stories">Search saved stories</string>
    <string name="hint_update">Your app has just been updated!</string>
    <string name="hn_link">Hacker News link</string>
    <string name="pref_offline_article">pref_offline_article</string>
    <string name="pref_offline_article_title">Download article</string>
    <string name="pref_offline_comments">pref_offline_comments</string>
    <string name="pref_offline_comments_title">Download comments</string>
    <string name="pref_offline_data">pref_offline_data</string>
    <string name="pref_offline_data_title">When to download</string>
    <string name="pref_offline_notification">pref_offline_notification</string>
    <string name="pref_offline_notification_summary">Show notification for download progress</string>
    <string name="pref_offline_notification_title">Display progress</string>
    <string name="pref_offline_readability">pref_offline_readability</string>
    <string name="pref_offline_readability_title">Download readability</string>
    <string name="pref_saved_item_sync">pref_saved_item_sync</string>
    <string name="pref_saved_item_sync_summary">Download content when you save story</string>
    <string name="pref_saved_item_sync_title">Enable offline access</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_widget_frequency">pref_widget_frequency</string>
    <string name="pref_widget_frequency_title">Update frequency</string>
    <string name="pref_widget_query">pref_widget_query</string>
    <string name="pref_widget_query_title">Filter by query (optional)</string>
    <string name="pref_widget_section">pref_widget_section</string>
    <string name="pref_widget_section_title">Section</string>
    <string name="pref_widget_section_value_top">top</string>
    <string name="pref_widget_theme">pref_widget_theme</string>
    <string name="pref_widget_theme_value_transparent">transparent</string>
    <string name="widget_options">Widget options</string>
</resources>