<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/widget_options" style="@style/Preference.Category.Hint">
        <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_widget_section_title" android:key="@string/pref_widget_section" android:defaultValue="@string/pref_widget_section_value_top" app:entries="@array/pref_widget_section_options" app:entryValues="@array/pref_widget_section_values" />
        <androidx.preference.EditTextPreference android:title="@string/pref_widget_query_title" android:key="@string/pref_widget_query" app:iconSpaceReserved="false" />
        <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_theme_title" android:key="@string/pref_widget_theme" android:defaultValue="@string/pref_widget_theme_value_transparent" app:entries="@array/pref_widget_theme_options" app:entryValues="@array/pref_widget_theme_values" />
        <io.github.hidroh.materialistic.preference.SimpleSpinnerPreference android:title="@string/pref_widget_frequency_title" android:key="@string/pref_widget_frequency" android:defaultValue="6" app:entries="@array/pref_widget_frequency_options" app:entryValues="@array/pref_widget_frequency_values" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>